[package]
name = "decentralized_voting"
version = "0.1.0"
edition = "2021"
description = "A decentralized voting system for the Arch ecosystem"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-program = "1.17.0"
thiserror = "1.0.44"
borsh = "0.10.3"
borsh-derive = "0.10.3"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.2", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"

[features]
test-sbf = []

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
